--- a/viewer/src/styles.styl
+++ b/viewer/src/styles.styl
@@ -1,3 +1,12 @@
 /* You can add global styles to this file, and also import other style files */
 @import "~leaflet/dist/leaflet.css"
+@import "~font-awesome/css/font-awesome.css"
 
+.img-marker
+  img
+    border-radius: 50%
+    border: 3px solid #fff
+.icon-marker
+  i
+    color: #ec2def
+    font-size: 3em;
