--- a/viewer/src/app/components/projects/projects.component.html
+++ b/viewer/src/app/components/projects/projects.component.html
@@ -1,3 +1,6 @@
-<p>
-  projects works!
-</p>
+<mat-card *ngFor="let proj of projects">
+  <h2>
+    <a [routerLink]="['/projects', proj.id]">{{ proj.name }} </a>
+  </h2>
+  <p> {{ proj.description }}</p>
+</mat-card>
