feature properties component

--- a/viewer/src/app/components/projects/projects.component.html
+++ b/viewer/src/app/components/projects/projects.component.html
@@ -1,3 +1,4 @@
+<h1> My Projects </h1>
 <mat-card *ngFor="let proj of projects">
   <h2>
     <a [routerLink]="['/projects', proj.id]">{{ proj.name }} </a>
