--- a/viewer/src/styles.styl
+++ b/viewer/src/styles.styl
@@ -1,12 +1,26 @@
 /* You can add global styles to this file, and also import other style files */
 @import "~leaflet/dist/leaflet.css"
 @import "~font-awesome/css/font-awesome.css"
+@import "~@angular/material/prebuilt-themes/indigo-pink.css"
+@import "~materialize-css/dist/css/materialize.css"
 
 .img-marker
   img
     border-radius: 50%
     border: 3px solid #fff
+
 .icon-marker
   i
     color: #ec2def
     font-size: 3em;
+
+.marker-cluster
+  div
+    width: 25px;
+    height: 25px;
+    background-color #4f8677;
+    border: 3px solid #fff;
+    text-align: center;
+    border-radius: 50%;
+    line-height 19px;
+    color: #fff;
