--- a/viewer/src/app/components/gallery/gallery.component.html
+++ b/viewer/src/app/components/gallery/gallery.component.html
@@ -1,5 +1,6 @@
 <!--TODO: make this a material image list component-->
 <div mat-dialog-content>
+  <app-propstable [props]=data.properties></app-propstable>
   <mat-card *ngFor="let asset of data.properties.assets">
     <img mat-card-image src='{{asset.path+".jpeg"}}' style="max-width:300px">
   </mat-card>
