--- a/viewer/src/app/components/projects/projects.component.html
+++ b/viewer/src/app/components/projects/projects.component.html
@@ -1,7 +1,23 @@
-<h1> My Projects </h1>
-<mat-card *ngFor="let proj of projects">
-  <h2>
-    <a [routerLink]="['/projects', proj.id]">{{ proj.name }} </a>
-  </h2>
-  <p> {{ proj.description }}</p>
-</mat-card>
+<nav>
+  <div class="nav-wrapper">
+    <a href="" class="brand-logo">Geo Viewer</a>
+  </div>
+</nav>
+<div class="container">
+  <div class="row">
+    <h2> My Projects </h2>
+  </div>
+
+  <div class="row">
+    <div class="col s12">
+      <mat-card *ngFor="let proj of projects">
+        <h4>
+          <a [routerLink]="['/projects', proj.id]">{{ proj.name }} </a>
+        </h4>
+        <p> {{ proj.description }}</p>
+      </mat-card>
+    </div>
+
+  </div>
+
+</div>
