Remove linkes to other README files in generated client

--- a/client/README.mustache
+++ b/client/README.mustache
@@ -76,18 +76,18 @@ except ApiException as e:
     print("Exception when calling ProjectsApi->upload_file: %s\n" % e)
 ```
 
-## Documentation for API Endpoints
+## API Endpoints
 
 All URIs are relative to *{{basePath}}*
 
 Class | Method | HTTP request | Description
 ------------ | ------------- | ------------- | -------------
-{{#apiInfo}}{{#apis}}{{#operations}}{{#operation}}*{{classname}}* | [**{{operationId}}**]({{apiDocPath}}{{classname}}.md#{{operationIdLowerCase}}) | **{{httpMethod}}** {{path}} | {{#summary}}{{summary}}{{/summary}}
+{{#apiInfo}}{{#apis}}{{#operations}}{{#operation}}*{{classname}}* | **{{operationId}}** | **{{httpMethod}}** {{path}} | {{#summary}}{{summary}}{{/summary}}
 {{/operation}}{{/operations}}{{/apis}}{{/apiInfo}}
 
-## Documentation For Models
+## Models
 
-{{#models}}{{#model}} - [{{{classname}}}]({{modelDocPath}}{{{classname}}}.md)
+{{#models}}{{#model}} - {{{classname}}}
 {{/model}}{{/models}}
 
 ## Documentation For Authorization
