--- a/client/setup.mustache
+++ b/client/setup.mustache
@@ -32,8 +32,9 @@ REQUIRES.append("tornado")
 
 # read the contents of your README file
 from os import path
+import io
 this_directory = path.abspath(path.dirname(__file__))
-with open(path.join(this_directory, 'README.md'), encoding='utf-8') as f:
+with io.open(path.join(this_directory, 'README.md'), encoding='utf-8') as f:
     long_description = f.read()
 
 setup(
